bug: Tabs are working on mobile now

--- a/example/tabs/web/demo.css
+++ b/example/tabs/web/demo.css
@@ -540,7 +540,6 @@ html, body {
   padding: 0; }
 
 body {
-  padding: 24px;
   box-sizing: border-box;
   background: #FFF; }
 
@@ -962,8 +961,31 @@ dt {
   width: 100%; }
 
 .wsk-tabs__tab-bar {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-align-content: space-between;
+      -ms-flex-line-pack: justify;
+          align-content: space-between;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   height: 48px;
-  padding: 0 0 0 56px;
+  padding: 0 0 0 0;
   margin: 0;
   border-bottom: 1px solid #e0e0e0; }
 
